[package]
name = "yellowstone-fumarole-client"
description = "Yellowstone Fumarole Client"
version = "0.2.2+solana.2"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = true

[features]
default = []
prometheus = ["dep:prometheus"]

[package.metadata]
include = [
    "proto/**",
]

[dependencies]
async-trait = { workspace = true }
bytesize = { workspace = true, features = ["serde"] }
futures = { workspace = true }
fxhash = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
solana-clock = { workspace = true }
lazy_static = { workspace = true }
prometheus = { workspace = true, optional = true }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tokio-stream = { workspace = true }
tonic = { workspace = true, features = ["tls-native-roots", "tls-ring", "gzip", "zstd"] }
tonic-prost = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
yellowstone-grpc-proto = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
protobuf-src = { workspace = true }

[lints]
workspace = true